--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -299,4 +299,16 @@ overflow-y: scroll;
 }
 
 
+.avatar-circle {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  font-size: 18px;
+  color: white;
+  background-color: orange;
+}
 
