--- a/src/app/pages/restaurantdetail/restaurantdetail.scss
+++ b/src/app/pages/restaurantdetail/restaurantdetail.scss
@@ -69,14 +69,14 @@ h5.active::after {
   }
 }
 .star-container{
-    height: 40px;
-    margin-bottom: 20px;
-
+  
+ margin-top: 5px;
 }
 .star-wrapper {
   width: 40px;
   height: 40px;
   margin-right: 6px;
+  
   cursor: pointer;
 }
 
@@ -119,7 +119,7 @@ h5.active::after {
 
 
 
-.bottom-sheet-backdrop{
+.bottom-sheet-backdrop {
   position: fixed;
   inset: 0;
   background: rgba(0, 0, 0, 0.45);
@@ -129,72 +129,81 @@ h5.active::after {
   align-items: flex-end;
 }
 
-
 .bottom-sheet {
   width: 100%;
   max-width: 600px;
   height: 100%;
   background-color: white;
-  border-radius: 16px;      
-  margin-bottom: 0;
+  border-radius: 16px;
   animation: slideUp 0.3s ease-out;
-  overflow: hidden;         
   display: flex;
-  flex-direction: column;   
+  flex-direction: column;
+  overflow: hidden;
 }
 
-.sheet-header{
+
+.bottom-sheet.no-user {
+  height: auto;
+  max-height: 180px;
+  align-self: center;
+}
+
+
+.no-user-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 24px;
+}
+
+.login-warning {
+  color: red;
+  font-weight: 600;
+  text-align: center;
+}
+
+
+.sheet-header {
   position: sticky;
   top: 0;
   background: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
   padding: 16px;
   border-bottom: 1px solid #eee;
-  z-index: 1;
-}
-
-.sheet-footer{
   display: flex;
-   justify-content: center;
-  align-items:center ;
-  padding: 12px 16px;
-   width: 100%;
-   background-color: red;
-  background: #fff;
-  position: sticky;
-  bottom: 0;
-  z-index: 10;
+  justify-content: center;
+  align-items: center;
 }
 
-.sheet-footer button{
-  min-width: 100px;
-}
-.close-btn{
+.close-btn {
   position: absolute;
   left: 16px;
-  font-size: 18px;
   cursor: pointer;
-  color: #333;
+}
 
-  &:hover {
-    opacity: 0.7;
+.sheet-footer {
+  position: sticky;
+  bottom: 0;
+  padding: 12px;
+  display: flex;
+  justify-content: center;
+  background: #fff;
+   z-index: 1001;
+}
+
+
+@media (min-width: 768px) {
+  .bottom-sheet {
+    height: 80%;
+    margin-bottom: 70px;
+  }
+
+  .bottom-sheet.no-user {
+    height: auto;
+    margin-bottom: 0;
   }
 }
 
-
-.sheet-content {
-  overflow-y: auto;        
-  padding: 20px;
-  font-size: 16px;
-  line-height: 1.5;
-  color: #444;
-  flex-grow: 1;           
-}
-
-@keyframes slideUp{
+@keyframes slideUp {
   from {
     transform: translateY(100%);
   }
@@ -204,11 +213,29 @@ h5.active::after {
 }
 
 
-@media (min-width: 768px) {
-  .bottom-sheet{
-   
-    height:80%;
-    border-radius: 16px ;
-    margin-bottom: 70px;
-  }
+.info-list {
+  margin-top: 16px;
+}
+
+.info-item {
+  margin-bottom: 16px;
+}
+
+.info-icon {
+  font-size: 22px;
+  color: #000;
+}
+
+.info-content {
+  margin-left: 15px;
+}
+
+.info-title {
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.info-text {
+  margin-top: 5px;
+  color: #555;
 }
