--- a/src/app/pages/userprofile/userprofile.html
+++ b/src/app/pages/userprofile/userprofile.html
@@ -16,17 +16,19 @@ border-bottom:1px solid grey;
 <div class="d-flex align-items-center"
    style="height: 150px;"
 >
-
-    <div style="
-  width: 100px; 
-  height: 100px; 
-  background-color: purple; 
-  border-radius: 50%;
-">
+@if(user() !=null){
+      <div
+  class="avatar-circle"
+  [style.background]="avatarColor()"
+>
+  {{ getFirstLetter(user()?.name ??" ") }}
 </div>
 <div>
-    <h2 class="ms-2">Dan</h2>
+    <h2 class="ms-2">{{user()?.name}}</h2>
 </div>
+}
+    
+
 </div>
 
 
@@ -39,21 +41,40 @@ border-bottom:1px solid grey;
 <div class="d-none d-xl-flex  col-xl-2 h-1"> </div>
 
 <div class=" col-12 col-xl-8 ">
-<div class="d-flex justify-content-between bg-white"
-style="
-height:50px;
+ <div class="bg-white tab-wrapper">
+ <div class="row">
+<div
+    class="col-4 tab-item"
+    routerLink="account"
+    routerLinkActive="active"
+    [routerLinkActiveOptions]="{ exact: true }"
+  >
+    Account Detail
+  </div>
+     <div
+    class=" col-4 tab-item"
+    routerLink="reservation"
+    routerLinkActive="active"
+    [routerLinkActiveOptions]="{ exact: true }"
+  >
+    Reservation
+  </div>
 
-"
+  <div
+    class="col-4 tab-item"
+    routerLink="saved"
+    routerLinkActive="active"
+    [routerLinkActiveOptions]="{ exact: true }"
+  >
+    Restaurant Save
+  </div>
 
->
-
-    <h5>Reservation</h5>
-    <h5>Restaurant Save</h5>
-    <h5>Account Detail</h5>
+  
+ </div>
 </div>
 
 <div>
- <!-- @yield('content') -->
+<router-outlet></router-outlet>
 </div>
 
 
