--- a/src/app/pages/view-all/view-all.scss
+++ b/src/app/pages/view-all/view-all.scss
@@ -67,9 +67,10 @@
   }
 
   .restaurant-card {
-    background: red;
+    background: white;
     padding: 0;
     display: flex;
+    border-radius: 4px;
     flex-direction: column;
     cursor: pointer;
   }
@@ -79,6 +80,7 @@
     width: 100%;
     height: 150px;
     background-size: cover;
+ 
     background-position: center;
 
     .close-btn {
